--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,16 @@ services:
       POSTGRES_DB: nest # Corrected to POSTGRES_DB
     networks:
       - freecodecamp
+  test-db:
+    image: postgres:16
+    ports:
+      - 5435:5432
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: nest # Corrected to POSTGRES_DB
+    networks:
+      - freecodecamp    
 
 networks:
   freecodecamp:
